--- a/style.css
+++ b/style.css
@@ -156,15 +156,17 @@ h2:hover {
 .title {
     margin-top: 20px;
     margin-left: 40px;
-    height: 100px;
+    height: max-content;
     width: auto;
     display: flex;
     align-items: center;
+
 }
 
 .Bpoint {
-    width: 35px;
-    height: 35px;
+    min-width: 40px;
+    max-height: 40px;
+    height: 40px;
     border: 4px solid rgb(247, 126, 83);
     box-shadow: 0px 0px 0px 4px rgb(161, 78, 38);
     background-color: rgb(161, 78, 38);
