--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ h2:hover {
 .Bpoint {
     min-width: 40px;
     max-height: 40px;
+    width: 40px;
     height: 40px;
     border: 4px solid rgb(247, 126, 83);
     box-shadow: 0px 0px 0px 4px rgb(161, 78, 38);
@@ -184,7 +185,7 @@ h2 {
 
 .textBox {
     height: max-content;
-    width: 100%;
+    width: 90%;
 }
 
 .content{
