--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ h2:hover {
     margin-top: 20px;
     margin-left: 40px;
     height: max-content;
-    width: auto;
+    width: 90%;
     display: flex;
     align-items: center;
 
@@ -194,6 +194,9 @@ p {
     margin-left:10px;
     height: min-content;
     width: 90%;
+    color:rgb(190, 124, 128);
+    font-family: 'Montserrat';
+    font-size: 175%;
 }
 
 .content{
