--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
+    overflow-y:scroll;
 }
 
 h1 {
@@ -186,7 +187,7 @@ h2 {
 p {
     color:rgb(190, 124, 128);
     font-family: 'Montserrat';
-    font-size: 175%;
+    font-size: 100%;
 }
 
 .textBox {
@@ -194,9 +195,9 @@ p {
     margin-left:10px;
     height: min-content;
     width: 90%;
-    color:rgb(190, 124, 128);
+    color:rgb(0, 0, 0);
     font-family: 'Montserrat';
-    font-size: 175%;
+    font-size: 100%;
 }
 
 .content{
