--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     width: 100%;
     height:max-content;
     overflow-y:scroll;
-    overflow-x: unset;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -181,26 +181,26 @@ h2 {
 p {
     color:black;
     font-family: 'Montserrat';
-    font-size: 100%;
+    font-size: 120%;
     hyphens: auto;
 }
 
 .textBox {
     margin-top: 20px;
     margin-left:10px;
-    height: min-content;
-    width: 90%;
+    height: 100%;
+    width: 100%;
     color:rgb(0, 0, 0);
     font-family: 'Montserrat';
-    font-size: 100%;
+    font-size: 120%;
     hyphens: auto;
 }
 
 .content{
     width: 60%;
     height:500px;
-    margin-bottom:30px;
     margin-left: 40px;
+    margin-bottom: 30px;
 }
 
 #im1 {
