--- a/style.css
+++ b/style.css
@@ -181,8 +181,9 @@ h2 {
 p {
     color:black;
     font-family: 'Montserrat';
-    font-size: 120%;
+    font-size: 150%;
     hyphens: auto;
+    line-height: 1.5;
 }
 
 .textBox {
@@ -192,7 +193,7 @@ p {
     width: 100%;
     color:rgb(0, 0, 0);
     font-family: 'Montserrat';
-    font-size: 120%;
+    font-size: 150%;
     hyphens: auto;
 }
 
